# libcanplusplus

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindCAN++.cmake
doc/: Doxyfile  README.txt
elmo_devices/: CMakeLists.txt  package.xml
elmo_devices/include/elmo_devices/: DeviceELMOMotor.hpp  DeviceELMOMotorParameters.hpp  PDOELMOMotor.hpp  SDOELMOMotor.hpp
elmo_devices/src/: DeviceELMOMotor.cpp
examples/: CMakeLists.txt
examples/SingleELMOandRE40MotorPThread/: CMakeLists.txt  DeviceELMOMotorParametersESA.hpp  README.txt  singleELMOandRE40MotorPThread_main.cpp
examples/SingleEPOS2and4poleMotorPThread/: DeviceEPOS2MotorParameters4pole.hpp  singleEPOS2and4poleMotorPThread_main.cpp
examples/hdpc_boot/: manifest.xml
examples/hdpc_com/: CMakeLists.txt  mainpage.dox
examples/hdpc_com/launch/: hdpc_geom.launch
examples/hdpc_com/msg/: HDPCConst.msg  Readings.msg
examples/hdpc_com/src/: hdpc_com_main.hpp
examples/hdpc_com/src/devices/: DeviceELMOBaseMotor.cpp  DeviceELMOBaseMotor.hpp  DeviceELMODrivingMotor.cpp  DeviceELMODrivingMotor.hpp  DeviceELMOMotorParametersDrivingAndSteering.hpp  DeviceELMOSteeringMotor.hpp  DeviceELMOSteeringMotorVel.cpp  DeviceELMOSteeringMotorVel.hpp
examples/hdpc_com/src/state_machine/: HDPCStateMachine.cpp  HDPCStateMachine.hpp
examples/hdpc_com/srv/: ChangeStateMachine.srv
examples/hdpc_com/test/: zero_to_ninety.bag
examples/hdpc_drive/: CMakeLists.txt  mainpage.dox
examples/hdpc_drive/launch/: hdpc_drive.launch  hdpc_teleop.launch
examples/hdpc_drive/msg/: DirectDrive.msg  HDPCModes.msg  Status.msg
examples/hdpc_drive/src/: hdpc_drive.cpp
examples/hdpc_drive/srv/: SetControlMode.srv
examples/hdpc_teleop/: CMakeLists.txt  mainpage.dox  manifest.xml
examples/hdpc_teleop/src/: hdpc_teleop.cpp
examples/hdpc_visualize/: manifest.xml
include/: CANPThread.h  LibCANConfig.h
libcanplusplus/: CMakeLists.txt  package.xml
libcanplusplus/include/libcanplusplus/: Bus.hpp  BusManager.hpp  CANMsg.hpp  CANOpenMsg.hpp  Device.hpp  PDOMsg.hpp  SDOMsg.hpp  SDOReadMsg.hpp  SDOWriteMsg.hpp  canopen_pdos.hpp  canopen_sdos.hpp
libcanplusplus/src/: Bus.cpp  CANOpenMsg.cpp  Device.cpp  SDOMsg.cpp  SDOReadMsg.cpp  SDOWriteMsg.cpp
maxon_devices/: CMakeLists.txt  package.xml
maxon_devices/include/maxon_devices/: DeviceEPOS2Motor.hpp  DeviceEPOS2MotorParameters.hpp  DeviceEPOS2MotorParametersASL.hpp  PDOEPOS2Motor.hpp  SDOEPOS2Motor.hpp
maxon_devices/src/: DeviceEPOS2Motor.cpp
scripts/: delSHM
src/examples/: CMakeLists.txt
src/examples/SingleELMOandRE40MotorPThread/: CMakeLists.txt  DeviceELMOMotorParametersESA.hpp  singleELMOandRE40MotorPThread_main.cpp
src/examples/SingleEPOS2and4poleMotorPThread/: CMakeLists.txt  singleEPOS2and4poleMotorPThread_main.cpp
src/examples/hdpc_boot/: mainpage.dox
src/examples/hdpc_boot/scripts/: launch_hdpc.sh  rc.local
src/examples/hdpc_com/: CMakeLists.txt  ELMO_Identification.ods  manifest.xml
src/examples/hdpc_com/doc/: statechart.dia
src/examples/hdpc_com/include/hdpc_com/: HDPCGeometry.h  HDPCStateMachineEnums.h
src/examples/hdpc_com/launch/: hdpc_com.launch
src/examples/hdpc_com/msg/: Commands.msg  HDPCConst.msg  MotorReadings.msg  Readings.msg
src/examples/hdpc_com/src/: hdpc_com_main.cpp  hdpc_com_main.hpp
src/examples/hdpc_com/src/devices/: DeviceELMOBaseMotor.cpp  DeviceELMOBaseMotor.hpp  DeviceELMODrivingMotor.cpp  DeviceELMODrivingMotor.hpp  DeviceELMOMotorParametersDrivingAndSteering.hpp  DeviceELMOMotorParametersHDPC.hpp  DeviceELMOSteeringMotor.cpp  DeviceELMOSteeringMotor.hpp  DeviceELMOSteeringMotorVel.cpp
src/examples/hdpc_com/src/state_machine/: HDPCStateMachine.cpp  HDPCStateMachine.hpp  HDPCStates.cpp  HDPCStates.hpp
src/examples/hdpc_com/test/: README.txt
src/examples/hdpc_drive/: manifest.xml
src/examples/hdpc_drive/launch/: hdpc_drive.launch  hdpc_teleop.launch
src/examples/hdpc_drive/msg/: Ackermann.msg  DirectDrive.msg  HDPCConst.msg  Status.msg
src/examples/hdpc_drive/src/: hdpc_drive.cpp
src/examples/hdpc_drive/srv/: SetControlMode.srv
src/examples/hdpc_teleop/: manifest.xml
src/examples/hdpc_teleop/launch/: hdpc_teleop.launch
src/examples/hdpc_teleop/src/: hdpc_teleop.cpp
src/examples/hdpc_visualize/: CMakeLists.txt  mainpage.dox
src/examples/hdpc_visualize/src/: hdpc_visualize.cpp
src/libcanplusplus/: CMakeLists.txt  LibCANConfig.h.in
src/libcanplusplus/CANMessage/: CANOpenMsg.cpp  CANOpenMsg.hpp  CMakeLists.txt  PDOManager.cpp  PDOManager.hpp  SDOManager.cpp  SDOManager.hpp  SDOMsg.cpp  SDOMsg.hpp  SDOReadMsg.cpp  SDOReadMsg.hpp  SDOWriteMsg.cpp  SDOWriteMsg.hpp
src/libcanplusplus/CANSharedMemory/: CANSharedMemory.c  CANSharedMemory.hpp  CANSharedMemoryDecl.hpp  CANSharedMemoryFct.c  CANSharedMemoryFct.hpp  CMakeLists.txt  PThreadHeaders.hpp  XenoHeaders.hpp
src/libcanplusplus/SL/: CMakeLists.txt  SLDefines.hpp  SLSharedMemory.c  SLSharedMemory.hpp  SLUtility.c  SLUtility.h  SLVariables.hpp  SLVx2UnixWrappers.c  SLVx2XenoWrappers.c  SLVxWrapper.hpp
src/libcanplusplus/bus/: Bus.cpp  Bus.hpp  BusManager.cpp  BusManager.hpp  CMakeLists.txt  LockedBusManager.hpp
src/libcanplusplus/devices/: CMakeLists.txt  Device.cpp  Device.hpp  DeviceManager.cpp
src/libcanplusplus/devices/ELMOMotor/: CMakeLists.txt  DeviceELMOMotor.cpp  DeviceELMOMotor.hpp  DeviceELMOMotorParameters.hpp  PDOELMOMotor.hpp  SDOELMOMotor.hpp
src/libcanplusplus/devices/EPOS2Motor/: CMakeLists.txt  DeviceEPOS2Motor.cpp  DeviceEPOS2Motor.hpp  DeviceEPOS2MotorParameters.hpp  DeviceEPOS2MotorParametersASL.hpp  PDOEPOS2Motor.hpp  SDOEPOS2Motor.hpp
