<?xml version="1.0"?>
<package format="2">
  <name>libcanplusplus</name>
  <version>0.0.0</version>
  <description>The libcanplusplus package</description>
  <maintainer email="gehrinch@ethz.ch">Christian Gehring</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/ethz-asl/libcanplusplus</url>
  <author email="gehrinch@ethz.ch">Christian Gehring</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <build_export_depend>boost</build_export_depend>
</package>
